# lib_console

./: CMakeLists.txt
include/: lib_console.h  lib_console_factory.h  lib_console_types.h
internal_include/: lib_console_types_internal.h
src/: lib_console.c  lib_console_factory.c
